--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,7 @@ services:
     environment:
       LISTEN_PORT: ":80"
     stop_grace_period: 1s
+    ports:
+      - 80:80
     expose:
       - "80"
