--- a/aio.service
+++ b/aio.service
@@ -9,6 +9,7 @@ RemainAfterExit=yes
 WorkingDirectory=/opt/aio-agent
 ExecStart=/usr/bin/docker-compose up -d
 ExecStop=/usr/bin/docker-compose down
+ExecReload=/usr/bin/docker-compose up -d
 TimeoutStartSec=0
 
 [Install]
