--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 services:
   aio-agent:
     container_name: aio-agent
-    image: prodaiotech/agentgo:latest
+    image: prodaiotech/agentgo:9b8318b2
     pull_policy: always
     env_file:
       - ./.aio-env
