--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
   aio-agent:
     container_name: aio-agent
     image: prodaiotech/agentgo:5dea9aab
-    deploy:
-      restart_policy:
-        condition: on-failure
-        delay: 3s
-        max_attempts: 3
-        window: 30s
+#    deploy:
+#      restart_policy:
+#        condition: on-failure
+#        delay: 3s
+#        max_attempts: 3
+#        window: 30s
     pull_policy: always
     env_file:
       - ./.aio-env
