--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 services:
   aio-agent:
     container_name: aio-agent
-    image: prodaiotech/agentgo:12d8f788
+    image: prodaiotech/agentgo:112233
     deploy:
       restart_policy:
         condition: on-failure
