--- a/aio.service
+++ b/aio.service
@@ -7,9 +7,9 @@ After=docker.service
 Type=oneshot
 RemainAfterExit=yes
 WorkingDirectory=/opt/aio-agent
-ExecStart=/usr/bin/docker-compose up -d
-ExecStop=/usr/bin/docker-compose down
-ExecReload=/usr/bin/docker-compose up -d
+ExecStart=/usr/bin/docker-compose --profile main up -d
+ExecStop=/usr/bin/docker-compose --profile "*" down
+ExecReload=/usr/bin/docker-compose --profile main up -d
 TimeoutStartSec=0
 
 [Install]
