--- a/volumes/conf.d/default.conf
+++ b/volumes/conf.d/default.conf
@@ -1,7 +1,10 @@
 server {
 
   location @agent {
+    proxy_set_header Host $host;
+    proxy_set_header Scheme $scheme;
     proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_pass http://aio-agent;
     proxy_connect_timeout 80;
     proxy_send_timeout 80;
