--- a/volumes/conf.d/default.conf
+++ b/volumes/conf.d/default.conf
@@ -20,9 +20,16 @@ server {
   ssl_certificate /opt/letsencrypt/fullchain.pem;
   ssl_certificate_key /opt/letsencrypt/privkey.pem;
 
+  location /aio-static/ { 
+    alias /opt/static/ ;
+    autoindex off ;
+  }
+
   location / {
     try_files $uri @agent;
   }
+
+
 
   error_page   500 502 503 504  /50x.html;
   location = /50x.html {
