add https for metrics endpoints

--- a/volumes/conf.d/status.conf
+++ b/volumes/conf.d/status.conf
@@ -14,7 +14,14 @@ server {
 }
 
 server {
-  listen 9300;
+  
+  listen 9300 ssl;
+
+  ssl_dhparam /opt/letsencrypt/dhparam.pem;
+  ssl_prefer_server_ciphers on;
+  ssl_certificate /opt/letsencrypt/fullchain.pem;
+  ssl_certificate_key /opt/letsencrypt/privkey.pem;
+
   access_log /dev/null;
   server_name  metrics-nginx;
 
