--- a/volumes/conf.d/upstream.conf
+++ b/volumes/conf.d/upstream.conf
@@ -7,7 +7,13 @@ upstream aio-agent-metrics {
 
 server {
   ### ADD TLS PROTECTION 
-  listen 9200;
+  listen 9200 ssl;
+
+  ssl_dhparam /opt/letsencrypt/dhparam.pem;
+  ssl_prefer_server_ciphers on;
+  ssl_certificate /opt/letsencrypt/fullchain.pem;
+  ssl_certificate_key /opt/letsencrypt/privkey.pem;
+
   access_log /dev/null;
   server_name  metrics-agent;
 
