--- a/volumes/conf.d/default.conf
+++ b/volumes/conf.d/default.conf
@@ -9,6 +9,7 @@ server {
     proxy_connect_timeout 80;
     proxy_send_timeout 80;
     proxy_read_timeout 80;
+    proxy_intercept_errors on;
   }
 
   listen 80;
@@ -27,5 +28,10 @@ server {
   error_page   500 502 503 504  /50x.html;
   location = /50x.html {
     root   /var/www/html/html;
+  }
+
+  error_page   404 /404.html;
+  location = /404.html {
+    root /var/www/html/html;
   }
 }
