--- a/volumes/nginx/stream.d/regular.conf
+++ b/volumes/nginx/stream.d/regular.conf
@@ -9,13 +9,15 @@ stream {
 
 ## Stream plain traffic
   server {
-    listen 80;
+    listen 80 proxy_protocol;
     proxy_pass aio-agent;
+    proxy_protocol on;
   }
 
 ## Stream TLS traffic
   server {
-    listen 443;
+    listen 443 proxy_protocol;
     proxy_pass aio-agent-tls;
+    proxy_protocol on;
   }
 }
